--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -163,7 +163,7 @@ LeadSummaryScreen As screen:
                     ZIndex: =1
 
                     ContractNumberLSS As typedDataCard.textualEditCard:
-                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_contractnumber"
                         Default: =ThisItem.'ContractNumber '
@@ -201,7 +201,7 @@ LeadSummaryScreen As screen:
                             DisplayMode: =Parent.DisplayMode
                             Font: =Font.Arial
                             Height: =50
-                            HoverBorderColor: =RGBA(0, 0, 0, 1)
+                            HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(0, 0, 0, 0)
                             MaxLength: =Parent.MaxLength
                             PaddingLeft: =5
@@ -244,7 +244,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                     BuildingNameLSS As typedDataCard.textualEditCard:
-                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_buildingname"
                         Default: =ThisItem.'BuildingName '
@@ -280,7 +280,7 @@ LeadSummaryScreen As screen:
                             DisplayMode: =Parent.DisplayMode
                             Font: =Font.Arial
                             Height: =50
-                            HoverBorderColor: =RGBA(0, 0, 0, 1)
+                            HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(0, 0, 0, 0)
                             MaxLength: =Parent.MaxLength
                             Mode: =TextMode.MultiLine
@@ -324,7 +324,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                     ZipCodeLSS As typedDataCard.textualEditCard:
-                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_pincode"
                         Default: =ThisItem.'ZipCode '
@@ -358,7 +358,7 @@ LeadSummaryScreen As screen:
                             DelayOutput: =true
                             DisplayMode: =Parent.DisplayMode
                             Height: =50
-                            HoverBorderColor: =RGBA(0, 0, 0, 1)
+                            HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(0, 0, 0, 0)
                             MaxLength: =Parent.MaxLength
                             PaddingLeft: =5
@@ -401,7 +401,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                     AddressLSS As typedDataCard.textualEditCard:
-                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_address"
                         Default: =ThisItem.Address
@@ -437,7 +437,7 @@ LeadSummaryScreen As screen:
                             DisplayMode: =Parent.DisplayMode
                             Font: =Font.Arial
                             Height: =50
-                            HoverBorderColor: =RGBA(0, 0, 0, 1)
+                            HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(0, 0, 0, 0)
                             MaxLength: =Parent.MaxLength
                             PaddingLeft: =5
@@ -480,7 +480,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                     UnitCountLSS As typedDataCard.numberEditCard:
-                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_unitcount"
                         Default: =ThisItem.NumberofUnits
@@ -516,7 +516,7 @@ LeadSummaryScreen As screen:
                             Font: =Font.Arial
                             Format: =TextFormat.Number
                             Height: =50
-                            HoverBorderColor: =RGBA(0, 0, 0, 1)
+                            HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(0, 0, 0, 0)
                             PaddingLeft: =5
                             RadiusBottomLeft: =0
@@ -558,7 +558,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                     UnitDescriptionLSS As typedDataCard.textualEditCard:
-                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_unitdescription"
                         Default: =ThisItem.UnitDescription
@@ -593,7 +593,7 @@ LeadSummaryScreen As screen:
                             DisplayMode: =Parent.DisplayMode
                             Font: =Font.Arial
                             Height: =70
-                            HoverBorderColor: =RGBA(0, 0, 0, 1)
+                            HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(0, 0, 0, 0)
                             MaxLength: =Parent.MaxLength
                             PaddingLeft: =5
@@ -636,7 +636,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                     ScopeLSS As typedDataCard.comboBoxEditCard:
-                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_Scope"
                         Default: =intxtScope.Selected
@@ -666,7 +666,8 @@ LeadSummaryScreen As screen:
 
                         IntxtScopeLSS As combobox:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                            ChevronBackground: =RGBA(0, 0, 0, 1)
+                            ChevronBackground: =RGBA(202, 202, 202, 1)
+                            ChevronHoverBackground: =Color.DimGrey
                             DefaultSelectedItems: =Parent.Default
                             DisplayFields: =["shlrf_primaryscopeofworkname"]
                             DisplayMode: =Parent.DisplayMode
@@ -716,7 +717,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                     ScopeOfWorkLSS As typedDataCard.comboBoxEditCard:
-                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_ScopeOfWorkLID"
                         Default: =ThisItem.PrimaryScopeofWorkLID
@@ -745,7 +746,8 @@ LeadSummaryScreen As screen:
 
                         IntxtScopeofWorkLSS As combobox:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                            ChevronBackground: =RGBA(0, 0, 0, 1)
+                            ChevronBackground: =RGBA(202, 202, 202, 1)
+                            ChevronHoverBackground: =Color.DimGray
                             Default: =IntxtScopeofwork.Selected
                             DefaultSelectedItems: =IntxtScopeofwork.SelectedItems
                             DisplayFields: =["shlrf_secondaryscopeofworkname"]
@@ -760,7 +762,7 @@ LeadSummaryScreen As screen:
                             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                             SearchFields: =["shlrf_secondaryscopeofworkname"]
                             SearchItems: =[]
-                            SelectionFill: =RGBA(0, 0, 0, 1)
+                            SelectionFill: =RGBA(202, 202, 202, 1)
                             SelectMultiple: =false
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Tooltip: =Parent.DisplayName
@@ -797,7 +799,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                     ManuallyScopeOfWorkLSS As typedDataCard.textualEditCard:
-                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_manuallyscopeofwork"
                         Default: =ThisItem.CustomScopeofWork
@@ -831,7 +833,7 @@ LeadSummaryScreen As screen:
                             DisplayMode: =Parent.DisplayMode
                             Font: =Font.Arial
                             Height: =50
-                            HoverBorderColor: =RGBA(0, 0, 0, 1)
+                            HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(0, 0, 0, 0)
                             MaxLength: =Parent.MaxLength
                             PaddingLeft: =5
@@ -874,7 +876,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                     EstimatedHoursLSS As typedDataCard.textualEditCard:
-                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_estimatedhours"
                         Default: =ThisItem.'EstimatedHours '
@@ -952,7 +954,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                     NotesLSS As typedDataCard.textualEditCard:
-                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_material"
                         Default: =ThisItem.Notes
@@ -1028,7 +1030,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                     UnitDownLSS As typedDataCard.comboBoxOptionSetSingleEditCard:
-                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_checklist"
                         Default: =ThisItem.IsUnitDown
@@ -1071,7 +1073,8 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                         CboxUDLSS As checkbox:
-                            CheckboxBorderColor: =RGBA(0, 0, 0, 1)
+                            BorderColor: =RGBA(202, 202, 202, 1)
+                            CheckboxBorderColor: =RGBA(202, 202, 202, 1)
                             CheckboxSize: =50
                             Default: =CboxUnitDown.Value
                             Font: =Font.Arial
@@ -1083,6 +1086,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =5
 
                     AdditionalExpensesRequiredLSS As typedDataCard.comboBoxOptionSetSingleEditCard:
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_additionalexpensesrequired"
                         Default: =ThisItem.AdditionalExpensesRequired
@@ -1125,7 +1129,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                         cboxAELSS As checkbox:
-                            CheckboxBorderColor: =RGBA(0, 0, 0, 1)
+                            CheckboxBorderColor: =RGBA(202, 202, 202, 1)
                             CheckboxSize: =50
                             Default: =CboxAdditionalExpensesRequired.Value
                             Font: =Font.Arial
@@ -1137,6 +1141,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =5
 
                     TravelRequiredLSS As typedDataCard.comboBoxOptionSetSingleEditCard:
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_travelrequired"
                         Default: =ThisItem.TravelRequired
@@ -1179,7 +1184,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                         cboxTravelRequiredLSS As checkbox:
-                            CheckboxBorderColor: =RGBA(0, 0, 0, 1)
+                            CheckboxBorderColor: =RGBA(202, 202, 202, 1)
                             CheckboxSize: =50
                             Default: =CboxTravelRequired.Value
                             Font: =Font.Arial
@@ -1191,6 +1196,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =5
 
                     CommunicatedtoCustomerLSS As typedDataCard.comboBoxOptionSetSingleEditCard:
+                        BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_communicatedtocustomer"
                         Default: =ThisItem.CommunicatedToCustomer
@@ -1233,7 +1239,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                         CboxCCLSS As checkbox:
-                            CheckboxBorderColor: =RGBA(0, 0, 0, 1)
+                            CheckboxBorderColor: =RGBA(202, 202, 202, 1)
                             CheckboxSize: =50
                             Default: =CboxCommunicatedtoCustomer.Value
                             Font: =Font.Arial
@@ -1249,7 +1255,7 @@ LeadSummaryScreen As screen:
                     BorderColor: =RGBA(39, 113, 194, 1)
                     DelayItemLoading: =true
                     FillPortions: =0
-                    Height: =If(glryImageLSS.AllItemsCount=0,0,glryImageLSS.AllItemsCount=1||glryImageLSS.AllItemsCount=2,250,glryImageLSS.AllItemsCount=4,550)
+                    Height: =If(glryImageLSS.AllItemsCount=0,0,glryImageLSS.AllItemsCount>0,200)
                     Items: |
                         =LeadImagesCollection
                     Layout: =Layout.Vertical
@@ -1259,7 +1265,7 @@ LeadSummaryScreen As screen:
                     TemplatePadding: =4
                     TemplateSize: =Min(250, Self.Height - 60)
                     Width: =Parent.Width/1.08
-                    WrapCount: =2
+                    WrapCount: =4
                     ZIndex: =2
 
                     ImageLSS As image:
@@ -1384,4 +1390,30 @@ LeadSummaryScreen As screen:
                     X: =145
                     Y: =790
                     ZIndex: =2
+
+            ctnSpaceES_2 As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
+                DropShadow: =DropShadow.None
+                FillPortions: =0
+                Height: =Parent.Height-ctnProgressBarCreatLead_4.Height-ctnButtonIS.Height-ctnImageIS.Height
+                LayoutAlignItems: =LayoutAlignItems.Center
+                LayoutGap: =10
+                LayoutJustifyContent: =LayoutJustifyContent.Center
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
+                Width: =Parent.Width
+                ZIndex: =4
+
+                Image3_6 As image:
+                    Fill: =RGBA(255, 255, 255, 1)
+                    Height: =Parent.Height
+                    Image: ='3x'
+                    Transparency: =0.9
+                    Width: =Parent.Width
+                    ZIndex: =1
 
