--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1182,6 +1182,7 @@ LeadScreen As screen:
                             Fill: =RGBA(255, 0, 0, 1)
                             Height: =60
                             HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
+                            OnSelect: =If(IsBlank(txitnptrejectLdS.Text),Notify("Please enter rejection comment."))
                             Text: ="Submit back to technician"
                             Width: =300
                             X: =410
