--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1028,6 +1028,7 @@ LeadScreen As screen:
 
                         ctnphotoglryLdS As groupContainer.verticalAutoLayoutContainer:
                             AlignInContainer: =AlignInContainer.SetByContainer
+                            FillPortions: =2
                             Height: =lblphotosLdS.Height+glryphotosLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutMinHeight: =100
