--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1118,6 +1118,7 @@ LeadScreen As screen:
                             ZIndex: =3
 
                         btnestimatenumberLdS As button:
+                            DisplayMode: =If((glryleadlistLS.Selected.LeadStatus="Inprogress" ||glryleadlistLS.Selected.LeadStatus="Quoted") && glryleadlistLS.Selected.QQTeamName=User().FullName,DisplayMode.Edit,DisplayMode.Disabled)
                             Fill: =RGBA(54, 176, 75, 1)
                             Height: =60
                             HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
