--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1181,6 +1181,7 @@ LeadScreen As screen:
                             ZIndex: =7
 
                         btnbacktotechnicianLdS As button:
+                            DisplayMode: =If(glryleadlistLS.Selected.LeadStatus="Inprogress" && glryleadlistLS.Selected.QQTeamName=User().FullName,DisplayMode.Edit,DisplayMode.Disabled)
                             Fill: =RGBA(255, 0, 0, 1)
                             Height: =60
                             HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
