--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1118,7 +1118,7 @@ LeadScreen As screen:
                             ZIndex: =3
 
                         btnestimatenumberLdS As button:
-                            DisplayMode: =If((glryleadlistLS.Selected.LeadStatus="Inprogress" ||glryleadlistLS.Selected.LeadStatus="Quoted") && glryleadlistLS.Selected.QQTeamName=User().FullName,DisplayMode.Edit,DisplayMode.Disabled)
+                            DisplayMode: =If((glryleadlistLS.Selected.LeadStatus="InProgress" ||glryleadlistLS.Selected.LeadStatus="Quoted") && glryleadlistLS.Selected.QQTeamName=User().FullName,DisplayMode.Edit,DisplayMode.Disabled)
                             Fill: =RGBA(54, 176, 75, 1)
                             Height: =60
                             HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
@@ -1181,7 +1181,7 @@ LeadScreen As screen:
                             ZIndex: =7
 
                         btnbacktotechnicianLdS As button:
-                            DisplayMode: =If(glryleadlistLS.Selected.LeadStatus="Inprogress" && glryleadlistLS.Selected.QQTeamName=User().FullName,DisplayMode.Edit,DisplayMode.Disabled)
+                            DisplayMode: =If(glryleadlistLS.Selected.LeadStatus="InProgress" && glryleadlistLS.Selected.QQTeamName=User().FullName,DisplayMode.Edit,DisplayMode.Disabled)
                             Fill: =RGBA(255, 0, 0, 1)
                             Height: =60
                             HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
